# budgeted-vlm-monitoring

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: tests.yml
configs/datasets/: ucf_crime.json  xd_violence.json
configs/experiments/: ablation_grid.json  core_grid.json  smoke.json
configs/prompts/: incidents.txt
docs/: ARTIFACT_STATUS_REVIEW_KO.md  COMPLETION_AUDIT_KO.md  CSV_SCHEMA.md  EXPERIMENT_PLAN_KO.md  GITHUB_SETUP_KO.md  MULTIPLEXING_KO.md  SERVER_RUNBOOK_KO.md  VENUE_STRATEGY_KO.md  VLM_CACHE_KO.md
paper/cvpr2027/: README.md
paper/iclr2027/: README.md  assumed_results.json  main.tex  refs.bib
paper/iclr2027/figures/: architecture_tikz.tex  dense_cost_scaling_tikz.tex  fa_recall_tikz.tex  frontier_tikz.tex  recall_gain_tikz.tex  (+6 more)
scripts/: build_manifest_from_csv.py  build_vlm_cache_from_predictions.py  build_vlm_query_pool.py  extract_clip_scores.py  extract_motion_features.py  extract_source_motion.py  make_oracle_vlm_cache.py  make_paper_assets.py  make_synthetic_manifest.py  merge_signal_csvs.py  multiplex_dataset.py  run_clip_verifier_cache.py  run_experiment.py  run_grid.py  summarize_results.py  update_paper_results_from_grid.py  validate_dataset_csvs.py  validate_vlm_cache.py
scripts/slurm/: run_core_grid.sbatch
src/bmvm/: __init__.py  evaluation.py  io.py  metrics.py  types.py  vlm_cache.py
tests/: test_evaluation.py  test_merge_signal_csvs.py  test_metrics.py  test_multiplex.py  test_synthetic_manifest.py  test_update_paper_results.py  test_validation_tools.py  test_vlm_cache.py  test_vlm_prediction_adapter.py
(+25 files in other folders)
